# rust-indexer

./: Cargo.toml  README.md
src/: lib.rs  main.rs
tests/: indexer_tests.rs
tests/data/sample_crate/: Cargo.toml
tests/data/sample_crate/src/: lib.rs  utils.rs
