[package]
name = "rust-indexer"
version = "0.1.0"
edition = "2024"

[dependencies]
walkdir = "2.5.0"
syn = { version = "2.0.111", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
quote = "1.0"
proc-macro2 = { version = "1.0", features = ["span-locations"] }
