[package]
name = "rust2json"
version = "0.1.0"
edition = "2024"
authors = ["Hamid Alavi Toussi"]
license = "MIT"
repository = "https://github.com/jslambda/rust-indexer"
description = "Reads a Rust project, and builds JSON for indexing"

[dependencies]
walkdir = "2.5.0"
syn = { version = "2.0.111", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
quote = "1.0"
proc-macro2 = { version = "1.0", features = ["span-locations"] }
